# personal-finance-dashboard

./: .eslintrc.js  .eslintrc.json  .gitignore  LICENSE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  storage.rs
src/app/: client-layout.tsx  globals.css  i18n.ts  layout.tsx  page.tsx
src/app/archive/: page.tsx
src/app/components/: Chart.tsx  Header.tsx  NotesModal.tsx  Sidebar.tsx  Summary.tsx  TransactionForm.tsx  TransactionList.tsx
src/app/context/: ArchiveFilterContext.tsx  NotesContext.tsx  SettingsContext.tsx  TransactionContext.tsx
src/app/reports/: page.tsx
src/app/settings/: page.tsx
src/app/transactions/: page.tsx
src/lib/: pdf-export.ts
src/locales/de/: translation.json
src/locales/en/: translation.json
src/locales/es/: translation.json
src/locales/pl/: translation.json
src/locales/ru/: translation.json
src/types/: AppState.ts  Note.ts  Transaction.ts  pdfmake.d.ts  tauri.d.ts
